<resources>
    <string name="app_name">Лаборатория \"Топливо\" ГСКБ</string>
    <string name="app_main">Журнал учета оборудования (СИ и ИО)</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Пароль</string>
    <string name="action_sign_in">Войти</string>
    <string name="exit">Выйти</string>
    <string name="today">Сегодня</string>
    <string name="add_1">-1 год</string>
    <string name="add1_1">+1 год</string>
    <string name="name_oborudovanie">Наименование оборудования (ИО, СИ)</string>
    <string name="marka_typ">Марка, тип</string>
    <string name="zavod_nomer">Заводской номер (инв. номер)</string>
    <string name="god_vypuska">Год выпуска (ввода в эксплуатацию)</string>
    <string name="period_met_ates_ghjverki">Периодичность метролог. аттестации, поверки, калибровки, мес.</string>
    <string name="data_posledney_atestacyu">Дата последней аттестации, поверки, калибровки</string>
    <string name="getdate">Выберите дату</string>
    <string name="data_konserv">Дата консервации</string>
    <string name="get_date_rekonserv">Дата расконсервации</string>
    <string name="primechania">Примечания</string>
    <string name="sort_alf">Сортировка по алфавиту</string>
    <string name="sort_time">Сортировка по времени</string>
    <string name="settings">Настройки</string>
    <string name="edit">Редактировать</string>
    <string name="delite">Удалить</string>
    <string name="notifi">Уведомления:</string>
    <string name="remove">Удалить?</string>
    <string name="remove_conform">Вы действительно хотите удалить \"%1$s\"?</string>
    <string name="cansel">Отмена</string>
    <string name="text_size">Размер текста (%1$d)</string>
    <string name="good">Хорошо</string>
    <string name="error">Ошибка</string>
    <string name="save">Сохранить</string>
    <string name="add">Добавить запись</string>
    <string name="set_date">%1$d-%2$s%3$d-%4$s%5$d</string>
    <string name="oborudovanie">Оборудование</string>
    <string name="reaktivy">Реактивы</string>
    <string name="name_reaktiv">Наименование реактива</string>
    <string name="partia">Номер партии</string>
    <string name="postavcik">Поставщик</string>
    <string name="input_data">Дата получения</string>
    <string name="pritenzii">Претензии</string>
    <string name="kvalifikacia">Квалификация</string>
    <string name="data_izgotovlinia">Дата изготовления(YYYY-MM-DD)</string>
    <string name="srok_xranetia">Срок хранения</string>
    <string name="uslovie_xran">Условия хранения</string>
    <string name="izmerenie">Единица измерения</string>
    <string name="input_zise">Количество получено</string>
    <string name="min_kolichestvo">Минимальное количество</string>
    <string name="add_partia">Добавить партию</string>
    <string name="obychnye">Обычные</string>
    <string name="data_spisania">Дата расхода</string>
    <string name="out_size">Количество</string>
    <string name="cel">Цель</string>
    <string name="spisanie">Расход</string>
    <string name="no">Нет</string>
    <string name="plotnost">Плотность</string>
    <string name="gurnal_rasxoda">Журнал расхода</string>
    <string name="no_data">Нет даты</string>
    <string name="kol_na_ost">Количество на остатке</string>
    <string name="login_password_error">Неверный логин или пароль</string>
    <string name="nomer_reaktiva">Номер реактива</string>
    <string name="auto_id">Автоматически</string>
    <string name="infinity">Не ограничен</string>
    <string-array name="izmerenie">
        <item>Килограмм</item>
        <item>Миллиграмм</item>
        <item>Литры</item>
        <item>Миллилитры</item>
        <item>Грамм</item>
        <item>Декалитр</item>
        <item>Флакон</item>
        <item>Ампула</item>
        <item>Штука</item>
    </string-array>
    <string-array name="izmerenie_a">
        <item>килограмм(-а)</item>
        <item>миллиграмм(-а)</item>
        <item>литр(-а)</item>
        <item>миллилитр(-а)</item>
        <item>грамм(-а)</item>
        <item>декалитр(-а)</item>
        <item>флакон(-а)</item>
        <item>ампула(-ы)</item>
        <item>штука(-и)</item>
    </string-array>
    <string-array name="izmerenie_smoll">
        <item>кг</item>
        <item>мг</item>
        <item>л</item>
        <item>мл</item>
        <item>г</item>
        <item>дал</item>
        <item>фл.</item>
        <item>амп.</item>
        <item>шт.</item>
    </string-array>
    <string name="opisanie1"><![CDATA[<strong>Марка, тип</strong><br>%1$s<br><br><strong>Заводской номер (инв. номер)</strong><br>%2$s<br><br><strong>Год выпуска (ввода в эксплуатацию)</strong><br>%3$s<br><br><strong>Периодичность метролог. аттестации, поверки, калибровки, мес.</strong><br>%4$s<br><br><strong>Дата последней аттестации, поверки, калибровки</strong><br>%5$s<br><br><strong>Дата следующей аттестации, поверки, калибровки</strong><br>%6$s<br><br><strong>Дата консервации</strong><br>%7$s<br><br><strong>Дата расконсервации</strong><br>%8$s<br><br><strong>Ответственный</strong><br>%9$s %10$s<br><br><strong>Примечания</strong><br>%11$s%12$s]]></string>
    <string name="opisanie2"><![CDATA[<strong>Партия</strong><br>%1$s<br><br><strong>Дата получения</strong><br>%2$s<br><br><strong>Поставщик</strong><br>%3$s<br><br><strong>Претензии</strong><br>%4$s<br><br><strong>Квалификация</strong><br>%5$s<br><br><strong>Номер партии</strong><br>%6$s<br><br><strong>Дата изготовления</strong><br>%7$s<br><br><strong>Срок хранения</strong><br>%8$s<br><br><strong>Условия хранения</strong><br>%9$s<br><br><strong>Единица измерения</strong><br>%10$s<br><br><strong>Количество на остатке</strong><br>%11$s<br><br><strong>Минимальное количество</strong><br>%12$s<br><br><strong>Ответственный</strong><br>%13$s %14$s<br><br><strong>Изменено</strong><br>%15$s]]></string>
    <!--%1$s is a string and %2$d is a decimal number-->
</resources>
