<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/add"
        android:icon="@drawable/plus"
        android:orderInCategory="100"
        android:title="@string/add"
        app:showAsAction="always" />
    <item
        android:id="@+id/add_reakt"
        android:icon="@drawable/plus"
        android:orderInCategory="100"
        android:title="@string/add"
        app:showAsAction="always" />
    <item
        android:id="@+id/sortdate"
        android:checkable="true"
        android:orderInCategory="100"
        android:title="@string/sort_alf"
        app:showAsAction="never" />
    <item
        android:id="@+id/sorttime"
        android:checkable="true"
        android:orderInCategory="100"
        android:title="@string/sort_time"
        app:showAsAction="never" />
    <item
        android:id="@+id/settings"
        android:orderInCategory="100"
        android:title="@string/settings"
        app:showAsAction="never" />
    <item
        android:id="@+id/exit"
        android:orderInCategory="100"
        android:title="@string/exit"
        app:showAsAction="never" />
</menu>