<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <TextView
        android:id="@+id/textViewTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:padding="10dp"
        android:textColor="@color/colorIcons"
        android:textSize="18sp"
        android:textStyle="bold" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textViewId"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/nomer_reaktiva"
                android:textColor="#FF000000"
                android:textSize="18sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/textViewIde"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/auto_id"
                android:inputType="text"
                android:textColor="#FF000000"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/name_reaktiv"
                android:textColor="#FF000000"
                android:textSize="18sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/textView2e"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:textColor="#FF000000"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/input_data"
                android:textColor="#FF000000"
                android:textSize="18sp"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView3e"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center_vertical"
                    android:hint="@string/no_data"
                    android:paddingBottom="10dp"
                    android:textColor="#FF000000"
                    android:textSize="18sp" />

                <Button
                    android:id="@+id/button3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/getdate" />
            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/postavcik"
                android:textColor="#FF000000"
                android:textSize="18sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/textView5e"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:textColor="#FF000000"
                android:textSize="18sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/pritenzii"
                android:textColor="#FF000000"
                android:textSize="18sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/textView6e"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/no"
                android:inputType="text"
                android:textColor="#FF000000"
                android:textSize="18sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/kvalifikacia"
                android:textColor="#FF000000"
                android:textSize="18sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/textView7e"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:textColor="#FF000000"
                android:textSize="18sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/partia"
                android:textColor="#FF000000"
                android:textSize="18sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/textView14e"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:paddingBottom="10dp"
                android:textColor="#FF000000"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/textView8"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/data_izgotovlinia"
                android:textColor="#FF000000"
                android:textSize="18sp"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/textView8e"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center_vertical"
                    android:hint="@string/no_data"
                    android:inputType="date"
                    android:paddingBottom="10dp"
                    android:textColor="#FF000000"
                    android:textSize="18sp" />

                <Button
                    android:id="@+id/button8"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/getdate" />
            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/srok_xranetia"
                android:textColor="#FF000000"
                android:textSize="18sp"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/textView9e"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:hint="1"
                    android:inputType="number"
                    android:paddingBottom="10dp"
                    android:textColor="#FF000000"
                    android:textSize="18sp" />

                <Spinner
                    android:id="@+id/spinner9"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:layout_marginBottom="10dp" />
            </LinearLayout>

            <CheckBox
                android:id="@+id/checkBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/infinity"
                android:textSize="18sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/uslovie_xran"
                android:textColor="#FF000000"
                android:textSize="18sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/textView10e"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/obychnye"
                android:inputType="text"
                android:paddingBottom="10dp"
                android:textColor="#FF000000"
                android:textSize="18sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/izmerenie"
                android:textColor="#FF000000"
                android:textSize="18sp"
                android:textStyle="bold" />

            <Spinner
                android:id="@+id/spinner11e"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginBottom="10dp" />

            <TextView
                android:id="@+id/textView12"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/input_zise"
                android:textColor="#FF000000"
                android:textSize="18sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/textView12e"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="0"
                android:inputType="numberDecimal"
                android:textColor="#FF000000"
                android:textSize="18sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/min_kolichestvo"
                android:textColor="#FF000000"
                android:textSize="18sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/textView13e"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="0"
                android:inputType="numberDecimal"
                android:textColor="#FF000000"
                android:textSize="18sp" />

        </LinearLayout>
    </ScrollView>
</LinearLayout>