<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <TextView
        android:id="@+id/textViewTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:padding="10dp"
        android:textColor="@color/colorIcons"
        android:textSize="18sp"
        android:textStyle="bold" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/name_oborudovanie"
                android:textColor="#FF000000"
                android:textSize="18sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/textView2e"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:textColor="#FF000000"
                android:textSize="18sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/marka_typ"
                android:textColor="#FF000000"
                android:textSize="18sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/textView3e"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:textColor="#FF000000"
                android:textSize="18sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/zavod_nomer"
                android:textColor="#FF000000"
                android:textSize="18sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/textView4e"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:textColor="#FF000000"
                android:textSize="18sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/god_vypuska"
                android:textColor="#FF000000"
                android:textSize="18sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/textView5e"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:textColor="#FF000000"
                android:textSize="18sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/period_met_ates_ghjverki"
                android:textColor="#FF000000"
                android:textSize="18sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/textView6e"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:paddingBottom="10dp"
                android:textColor="#FF000000"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/textView7"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/data_posledney_atestacyu"
                android:textColor="#FF000000"
                android:textSize="18sp"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView7e"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center_vertical"
                    android:paddingBottom="10dp"
                    android:textColor="#FF000000"
                    android:textSize="18sp" />

                <Button
                    android:id="@+id/button7"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/getdate" />
            </LinearLayout>

            <TextView
                android:id="@+id/textView9"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/data_konserv"
                android:textColor="#FF000000"
                android:textSize="18sp"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView9e"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center_vertical"
                    android:hint="@string/no_data"
                    android:paddingBottom="10dp"
                    android:textColor="#FF000000"
                    android:textSize="18sp" />

                <Button
                    android:id="@+id/button9"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/getdate" />
            </LinearLayout>

            <TextView
                android:id="@+id/textView10"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/get_date_rekonserv"
                android:textColor="#FF000000"
                android:textSize="18sp"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView10e"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center_vertical"
                    android:hint="@string/no_data"
                    android:paddingBottom="10dp"
                    android:textColor="#FF000000"
                    android:textSize="18sp" />

                <Button
                    android:id="@+id/button10"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/getdate" />
            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/primechania"
                android:textColor="#FF000000"
                android:textSize="18sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/textView12e"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:imeOptions="actionGo"
                android:inputType="text"
                android:textColor="#FF000000"
                android:textSize="18sp" />
        </LinearLayout>
    </ScrollView>
</LinearLayout>