<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <TextView
        android:id="@+id/textViewTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:padding="10dp"
        android:textColor="@color/colorIcons"
        android:textSize="18sp"
        android:textStyle="bold" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textViewOstatok"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="10dp"
                android:text="@string/kol_na_ost"
                android:textColor="#FF000000"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/textView1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/data_spisania"
                android:textColor="#FF000000"
                android:textSize="18sp"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView1e"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:paddingBottom="10dp"
                    android:textColor="#FF000000"
                    android:textSize="18sp" />

                <Button
                    android:id="@+id/button1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/getdate" />
            </LinearLayout>

            <TextView
                android:id="@+id/kolkast"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/out_size"
                android:textColor="#FF000000"
                android:textSize="18sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/textView2e"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="numberDecimal"
                android:textColor="#FF000000"
                android:textSize="18sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/plotnost"
                android:textColor="#FF000000"
                android:textSize="18sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/textView4e"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="1"
                android:inputType="numberDecimal"
                android:textColor="#FF000000"
                android:textSize="18sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/cel"
                android:textColor="#FF000000"
                android:textSize="18sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/textView3e"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:imeOptions="actionGo"
                android:inputType="text"
                android:textColor="#FF000000"
                android:textSize="18sp" />
        </LinearLayout>
    </ScrollView>
</LinearLayout>